2008-10-28  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.98.1.
	* NEWS: Update.
	* po/LINGUAS: Update.

2008-08-03  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.98.
	* NEWS: Update.

	* userhelper-wrap.c (struct response): Remove member user.  New memeber
	user_label.
	(userhelper_parse_childout): Create the "Authenticating as..." label
	as soon as the user name is known, not only when creating the dialog
	to ask questions.  (Also causes the label to be shown in non-modal
	dialogs with no prompts.)

	* userhelper-wrap.c (userhelper_parse_childout): Left-justify all
	messages.

	* userhelper-wrap.c (struct response): New member
	dialog_response_handler.
	(userhelper_dialog_response): New function.
	(userhelper_parse_childout): Support non-modal dialogs with no prompts.
	Keep resp->table alive across such dialogs.  Don't unnecessarily zero
	members of resp before freeing it.

	* userhelper-wrap.c (debug_msg)
	* userhelper.c (debug_msg)
	* userinfo.c (debug_msg): New macro.  Use it instead of surrounding
	debug prints with #ifdef DEBUG_USERHELPER.

2008-05-17  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (wrap): Remove /usr/X11R6/bin from the default path.
	Original patch by Michel Samia <msamia@redhat.com>.

2008-05-01  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Rename from configure.in.  Version 1.97.
	* NEWS: Update.

	* userhelper-wrap.c (userhelper_parse_childout): Don't interpret '_'
	in prompts as mnemonic character markup.

2008-04-10  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Version 1.96.1.
	* NEWS: Update.

2008-03-23  Miloslav Trmač  <mitr@redhat.com>

	* po/hu.po: Updated Hungarian translation by Lónyai Gergely
	<aleph@mandriva.org>.

2008-02-29  Miloslav Trmač  <mitr@redhat.com>

	* configure.in: Version 1.96.
	* NEWS: Update.

	* userhelper.c (selinux_enabled, get_init_context, setup_selinux_exec)
	(setup_selinux_root_exec, setup_selinux_user_exec): Remove.